Make to reinitialize windowless plug-ins correctly when restoring from bfcache.  Bug 385649, r+sr=roc.  Many thanks to Matthew Gregan for spotting the problem!